# rug

./: .cvsignore  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  README  TODO  autogen.sh  configure.in  rc.1  rug.1
de/: rug.1
src/: .cvsignore  ChangeLog  Makefile.am  rc.in  rcchannelcmds.py  rcchannelutils.py  rccommand.py  rcfault.py  rcformat.py  rclockcmds.py  rclogcmds.py  rcmain.py  rcmountcmds.py  rcnewscmds.py  rcpackagecmds.py  rcpackageutils.py  rcprefscmds.py  rcservicecmds.py  rcserviceutils.py  rcsystemcmds.py  rctalk.py  rctransactcmds.py  rcusercmds.py  rcutil.py  rcwhatcmds.py  rcyoucmds.py  rug.in  ximian_xmlrpclib.py
unmarshaller/: .cvsignore  ChangeLog  Makefile.am  setup.py  unmarshaller.c
